(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name demoParserFirst)
 (modules demoParserFirst)
 (libraries Java.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoParserSecond)
 (modules demoParserSecond)
 (libraries Java.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoClassLoader)
 (modules demoClassLoader)
 (libraries Java.Lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq)))
